styles.css
/* ... */
.button-link--small {
    width: 20%;
    align-self: center;
    margin: 25px;
}

.button-link--green {
    border: 3px solid #3ab54b;
    width: auto;
    color: #3ab54b;
    text-transform: uppercase;
    margin: 20px;
}

.one-fifth {
    width: 15%;
    padding: 10px;
    margin: 10px;
    border: 1px solid #3ab54b;
}

.one-fifth:hover {
    background-color: #3ab54b;
    cursor: pointer;
}

.product {
    position: relative;
    padding: 10px;
    margin: 10px;
    border: 1px solid #3ab54b;
    -webkit-transition: all 1.2s;
    transition: all 1.2s;
}

.product:hover {
    background-color: #3ab54b;
    color: white;
    cursor: pointer;
}

.hover-cover {
    display: none;
    position: absolute;
    top: 147px;
    color: black;
    font-size: x-large;
    border: solid white 2px;
    padding: 10px;
}

.product:hover .hover-cover {
    display: block;
    color: white;
}
.product:hover .thumbnail-container {
    opacity: 0;
}

.heavy-padding {
    padding: 10% 20% 10% 20%;
}

.left-right-padding {
    padding-left: 10%;
    padding-right: 10%;
}

.bg-grey {
    background:#f5f5f5;
    color: black;
    box-sizing: border-box;
}

.coffee-bean-border {
    width: 20px;
    position: relative;
    right: 50%;
    bottom: -26px;
}

.product-image, .add-to-cart, .product-description {
    width: 100%;
    box-sizing: border-box;
}

.product-description {
    margin-top: 10px;
}

.add-to-cart {
    box-shadow: -2px 2px 6px #888888;
}

.grind-select {
    text-align: center;
}

.cart-sticky {
    position: sticky;
    bottom: 0px;
    width: 100%;
    height: 50px;
    background: #3ab54b;
    color: black;
    border-top-left-radius: 7%;
    border-top-right-radius: 7%;
    transition: all 2s;
}

.cart-sticky-popup {
    background-color: #3ab54b;
    text-align: center;
    padding: 14px;
    color: white;
    font-weight: 900;
    border-top-left-radius: 7%;
    border-top-right-radius: 7%;
}

.cart-sticky--clicked {
    position: sticky;
    bottom: 0px;
    width: 100%;
    height: 420px;
    background: white;
    color: black;
    border-top-left-radius: 7%;
    border-top-right-radius: 7%;
    transition: all 2s;
}

@media screen and (max-width: 425px){
    .cart-container .add-to-cart {
        display: none;
    }
}

@media screen and (min-width: 425px){
    .cart-sticky{
        display: none;
    }
}
@media screen and (max-width: 425px) {
    .add-to-cart {
        box-shadow: none;
        padding: 0px;
        margin: 0px;
    }

    .price > label {
        width: 30%;
    }

    .flav-titles {
        display: none;
    }
}

.flavour-guide {
    background-color: white;
}

.half-width-image {
    width: 50%;
    padding-left: 25%;
}

.price > p {
    text-align: center;
}

.price > label {
    margin: 0px;
    width: 30%;
    border: 0px;
}


/* responsive stuff - product details page */

@media screen and (min-width: 600px) {
    .product-image {
        width: 35%;
    }
    .full-width {
        width: 50%;
        flex-wrap: wrap;
    }

    .cart-container {
        width: 65%;
        padding-top:0px;
        background-color: white;
    }
}


/* tabs for product details page */

input {
    display: none;
}


.tabbed {
    display: none;
    padding: 20px 0 0;
    border-top: 1px solid #abc;
}

#g200g:checked ~ #content1, #g500g:checked ~ #content2 {
    margin-top: 0px;
}

label {
    display: inline-block;
    margin: 0 0 -1px;
    padding: 15px 25px;
    text-align: center;
    color: #abc;
    border: 1px solid transparent;
}

label:hover {
    color: #3ab54b;
    cursor: pointer;
}

input:checked + label {
    color: white;
    background-color: #3ab54b;
    -webkit-transition: background-color 1.2s;
    transition: background-color 1.2s;
}

#tab1:checked ~ #content1, #tab2:checked ~ #content2, #g200g:checked ~ #content1, #g500g:checked ~ #content2 {
    display: block;
}

#g200g:checked ~ .cart-button::after {
    content: " - $9.99";
}

#g500g:checked ~ .cart-button::after {
    content: " - $14.99";
}

/* add to cart forms - static and sticky popup one on mob*/

.cart-button {
    width:98%;
    margin-left: 1%;
    margin-right: 1%;
}

.cart-button-no-price {
    width:98%;
    margin-left: 1%;
    margin-right: 1%;
}

#cart-button-popup {
    transition: all 2s;
}

#addToCart select, #grind {
    display: block;
}

.price {
    width: 100%;
}

.grind-icons {
    margin:5%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.cart-container .grind-icons input {
    margin:0px;
    padding:0;
    -webkit-appearance:none;
       -moz-appearance:none;
            appearance:none;
}

.grind-icons input:checked + div, .price input:checked + div {
    background-color: #3ab54b;
}

.grind-icons input:active + .icon-selector {
    opacity: .9;
    border: 1px solid #3ab54b;
    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
       -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
            filter: brightness(1.2) grayscale(.5) opacity(.9);
}

/* grind icons */

.aeropress {
    background-image: url(http://localhost/kiwicoffeeco2/aeropress-icon.png);
}

.moka {
    background-image: url(http://localhost/kiwicoffeeco2/moka-icon.png);
}

.chemex {
    background-image: url(http://localhost/kiwicoffeeco2/chemex-icon.png);
}

.drip {
    background-image: url(http://localhost/kiwicoffeeco2/drip-icon.png);
    background-size: 100%;
}

.espresso {
    background-image: url(http://localhost/kiwicoffeeco2/espresso-icon.png);
}

.aeropress:hover, .moka:hover, .chemex:hover, .drip:hover, .espresso:hover, .grind-icons > input:checked + label {
    background-image: none;
    background-color: #3ab54b;
    color: white;
    height: 125px;
    line-height: 125px;
    text-align: center;
}

.aeropress:hover::after, #aeropress:checked + label::after {
    content: "Aeropress";
}

.moka:hover::after, #moka:checked + label::after {
    content: "Moka";
}
/* ... */

